--- a/templates/historicaldata.html
+++ b/templates/historicaldata.html
@@ -15,9 +15,10 @@
     <nav class="navbar">
         <div class="container">
             <ul class="nav-links">
-                <li><a href="/" class="internal-link">Dashboard</a></li>
+                <li><a href="/realtime" class="internal-link">Dashboard</a></li>
                 <li><a href="/historicaldata" class="internal-link active">Historical Data</a></li>
                 <li><a href="/growthPred" class="internal-link">Growth Prediction</a></li>
+                <li id="logout-button"><a href="/logout" class="internal-link">Logout</a></li>
             </ul>
         </div>
     </nav>
