--- a/static/style.css
+++ b/static/style.css
@@ -12,6 +12,69 @@ html {
   background-color: white;
 }
 
+.login-body {
+  font-family: 'Nunito Sans', sans-serif;
+  background-color: #f4f4f4;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.login-container {
+  text-align: center;
+}
+
+.login-h1 {
+  text-align: center;
+  font-size: 36px;
+  margin-bottom: 20px;
+}
+form {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  width: 300px;
+  margin-right: 5px;
+}
+
+label {
+  display: block;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+input[type="text"],
+input[type="password"] {
+  width: 100%;
+  padding: 10px 2px;
+  margin-bottom: 15px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+input[type="submit"] {
+  background-color: #007bff;
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+input[type="submit"]:hover {
+  background-color: #0056b3;
+}
+
+/* Center the form horizontally */
+form {
+  margin: 0 auto;
+}
+
 #daily-button:hover, #mins-button:hover, #transferButton:hover, #fetchPredictionsButton:hover, #downloadCSVButton:hover {
   background-color: #0056b3; 
 }
@@ -83,13 +146,16 @@ a:hover {
   align-items: center;
   justify-content: center;
 }
+
 .navbar {
   background-color: #333;
   color: #fff;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
-  text-align: center; 
   font-size: 1.5em;
+  display: flex;
+  justify-content: center; 
+  align-items: center; 
 }
 
 .navbar:hover {
@@ -98,7 +164,7 @@ a:hover {
 
 .nav-links {
   list-style: none;
-  display: flex;
+  display: flex; 
 }
 
 .nav-links li {
@@ -119,6 +185,11 @@ a:hover {
 .nav-links a:hover {
   color: #00ffcc; 
 }
+
+#logout-button {
+  float: right;
+}
+
 
 .content-container {
   display: flex;
