--- a/templates/login.html
+++ b/templates/login.html
@@ -11,14 +11,25 @@
         <div class="login-container">
             <h1 class="login-h1">Login Authentication System</h1>
             <form method="POST">
-                <label for="username">Username:</label>
+                <label for="username">Username</label>
                 <input type="text" name="username" id="username" required><br><br>
         
-                <label for="password">Password:</label>
+                <label for="password">Password</label>
                 <input type="password" name="password" id="password" required><br><br>
         
                 <input type="submit" value="Login">
             </form>
+            {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+                <div class="alert alert-danger">
+                    <ul id="error-message">
+                        {% for category, message in messages %}
+                            <li>{{ message }}</li>
+                        {% endfor %}
+                    </ul>
+                </div>
+            {% endif %}
+        {% endwith %}
         </div>
     </body>
 </html>
