--- a/templates/growthPred.html
+++ b/templates/growthPred.html
@@ -12,10 +12,9 @@
     <nav class="navbar">
         <div class="container">
             <ul class="nav-links">
-                <li><a href="/realtime">Dashboard</a></li>
+                <li><a href="/">Dashboard</a></li>
                 <li><a href="/historicaldata">Historical Data</a></li>
                 <li><a href="/growthPred" class="active">Growth Prediction</a></li>
-                <li id="logout-button"><a href="/logout" class="internal-link">Logout</a></li>
             </ul>
         </div>
     </nav>
