--- a/templates/historicaldata.html
+++ b/templates/historicaldata.html
@@ -15,9 +15,10 @@
     <nav class="navbar">
         <div class="container">
             <ul class="nav-links">
-                <li><a href="/" class="internal-link">Dashboard</a></li>
+                <li><a href="/realtime" class="internal-link">Dashboard</a></li>
                 <li><a href="/historicaldata" class="internal-link active">Historical Data</a></li>
-                <li><a href="/growthPred" class="internal-link">Growth Prediction</a></li>
+                <li><a href="/growthPred" class="internal-link">Forecasting</a></li>
+                <li><a href="/logout" class="internal-link">Logout</a></li>
             </ul>
         </div>
     </nav>
@@ -25,19 +26,21 @@
         <h1>Previous Sensor Data Visualization</h1>
         <div class="transferButton-div">
             <button type="button" id="transferButton">Transfer Data</button>
+            <div class="loader" id="loadingIndicator"></div>
         </div>
-        <div id="popup" class="popup">
-            <div class="popup-content">
-                <p>Data transfer successful!</p>
-                <button id="ok-button">OK</button>
-            </div>
-        </div>        
         <div id="error-popup" class="popup">
             <div class="popup-content">
                 <p id="error-message">Error during transfer</p>
                 <button id="error-ok-button">OK</button>
             </div>
         </div>        
+        <div class="buttons">
+            <div class="mins-div">
+                <button type="button" id="mins-button">5 mins</button>
+                <select id="selected-date" name="selected-date"></select>
+            </div>
+            <button type="button" id="daily-button">Daily</button>
+        </div>
         <div class="prevDay-chart-container">
             <div class="chart-container">
                 <div id="chart1" onclick="switchChart(this)">
@@ -52,13 +55,6 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="buttons">
-            <div class="mins-div">
-                <button type="button" id="mins-button">5 mins</button>
-                <select id="selected-date" name="selected-date"></select>
-            </div>
-            <button type="button" id="daily-button">Daily</button>
         </div>
     </main>
     <script src="historical.js"></script>
