--- a/templates/login.html
+++ b/templates/login.html
@@ -9,7 +9,7 @@
     </head>
     <body class="login-body">
         <div class="login-container">
-            <h1 class="login-h1">Login Authentication System</h1>
+            <h1 class="login-h1">Lettuce Watch</h1>
             <form method="POST">
                 <label for="username">Username</label>
                 <input type="text" name="username" id="username" required><br><br>
