--- a/templates/realtime.html
+++ b/templates/realtime.html
@@ -18,9 +18,10 @@
     <nav class="navbar">
         <div class="container">
             <ul class="nav-links">
-                <li><a href="/" class=" internal-link active">Dashboard</a></li>
+                <li><a href="/realtime" class=" internal-link active">Dashboard</a></li>
                 <li><a href="/historicaldata" class="internal-link">Historical Data</a></li>
-                <li><a href="/growthPred" class="internal-link">Growth Prediction</a></li>
+                <li><a href="/growthPred" class="internal-link">Forecasting</a></li>
+                <li><a href="/logout" class="internal-link">Logout</a></li>
             </ul>
         </div>
     </nav>
