--- a/static/style.css
+++ b/static/style.css
@@ -145,6 +145,18 @@ button {
   cursor: pointer; 
   border-radius: 30px;
   margin: 10px;
+  white-space: nowrap;
+}
+
+input {
+  align-items: center;
+  justify-content: center;
+  font-size: 16px;
+  padding: 0;
+  margin: 0;
+  border: none;  
+  border-radius: 60px;
+  white-space: nowrap;
 }
 
 .transferButton-div {
@@ -182,7 +194,19 @@ button {
 }
 
 .buttons {
+  align-items: center;
+  justify-content: space-between;
   display: flex;
+}
+
+.setting-buttons {
+  display: flex;
+}
+
+.pdf-dowwnload {
+  display: flex;
+  width: 100%;
+  max-width: 600px;
 }
 
 #selected-date {
