--- a/templates/historicaldata.html
+++ b/templates/historicaldata.html
@@ -7,6 +7,10 @@
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-zoom"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.11.338/pdf.min.js" integrity="sha512-t2JWqzirxOmR9MZKu+BMz0TNHe55G5BZ/tfTmXMlxpUY8tsTo3QMD27QGoYKZKFAraIPDhFv56HLdN11ctmiTQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.2/jspdf.debug.js"></script>
+
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Nunito+Sans:opsz@6..12&family=Oswald:wght@300;700&display=swap" rel="stylesheet">
     <title>Historical Data</title>
     <link rel="stylesheet" href="style.css">
@@ -35,11 +39,17 @@
             </div>
         </div>        
         <div class="buttons">
-            <div class="mins-div">
-                <button type="button" id="mins-button">5 mins</button>
-                <select id="selected-date" name="selected-date"></select>
+            <div class="setting-buttons">
+                <div class="mins-div">
+                    <button type="button" id="mins-button">5 mins</button>
+                    <select id="selected-date" name="selected-date"></select>
+                </div>
+                <button type="button" id="daily-button">Daily</button>
             </div>
-            <button type="button" id="daily-button">Daily</button>
+            <div class="pdf-dowwnload">
+                <input type="text" id="fileNameInput" placeholder="Chart PDF Name">
+                <button type="button" id="pdf-button" onclick="downloadPDF()">Download PDF</button>
+            </div>
         </div>
         <div class="prevDay-chart-container">
             <div class="chart-container">
