--- a/templates/growthPred.html
+++ b/templates/growthPred.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Nunito+Sans:opsz@6..12&family=Oswald:wght@300;700&display=swap" rel="stylesheet">
     <script src="https://cdn.plot.ly/plotly-2.26.0.min.js" charset="utf-8"></script>
+    <!-- <script src="https://unpkg.com/html2pdf.js"></script> -->
     <title>Lettuce Growth Forecasting</title>
     <link rel="stylesheet" href="style.css">
 </head>
