Update download button

--- a/templates/historicaldata.html
+++ b/templates/historicaldata.html
@@ -27,7 +27,7 @@
         <div class="transferButton-div">
             <button type="button" id="transferButton">Transfer Data</button>
             <div class="loader" id="loadingIndicator"></div>
-            <button type="button" id="downloadCSVButton"><a href="/download_csv" download="sensor_data.csv">Download CSV</a></button>
+            <button id="downloadCSVButton">Download CSV</button>
         </div>
         <div id="popup" class="popup">
             <div class="popup-content">
