--- a/templates/historicaldata.html
+++ b/templates/historicaldata.html
@@ -8,6 +8,8 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-zoom"></script>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Nunito+Sans:opsz@6..12&family=Oswald:wght@300;700&display=swap" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.11.338/pdf.min.js" integrity="sha512-t2JWqzirxOmR9MZKu+BMz0TNHe55G5BZ/tfTmXMlxpUY8tsTo3QMD27QGoYKZKFAraIPDhFv56HLdN11ctmiTQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.2/jspdf.debug.js"></script>
     <title>Historical Data</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -28,6 +30,7 @@
             <button type="button" id="transferButton">Transfer Data</button>
             <div class="loader" id="loadingIndicator"></div>
             <button id="downloadCSVButton">Download CSV</button>
+            <button type="button" id="pdf-button" onclick="downloadPDF()">Download PDF</button>
         </div>
         <div id="popup" class="popup">
             <div class="popup-content">
@@ -42,7 +45,7 @@
             </div>
         </div>
         <div class="batchNumbers">
-            <label for="selected-batch-number">Batch Number:</label>
+            <label for="selected-batch-number">Batch Number: </label>
             <select id="selected-batch-number" name="selected-batch-number" style="display: block"></select>
         </div>      
         <div class="buttons">
